--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
   
   <header class="text-center mt-20">
     <!-- tagline -->
-    <p class="text-sm font-bold text-gray-400 custom-font-merriweather uppercase tracking-widest mx-auto">-- Build Landing Pages using HTML + Tailwind CSS + Javasctipt --</p>
+    <p class="text-sm font-bold text-gray-400 custom-font-merriweather uppercase tracking-widest mx-auto">-- Build Landing Pages using HTML + Tailwind CSS + Javascript --</p>
     <!-- main title -->
     <h1 class="text-3xl md:text-4xl lg:text-5xl xl:text-6xl font-bold my-4 custom-font-opensans">
       Convert <span class="text-blue-500">Screenshots to Code</span><br>for Building Landing Pages in "<" 2 mins
