--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
 <nav class="flex flex-wrap items-center justify-between p-6">
     <!-- navigation links left -->
     <div class="flex items-center text-gray-400 space-x-10 mx-auto ">   
-        <a href="#" class="custom-font-merriweather hover:text-white text-4xl">𝕏</a>   
+        <a href="#" class="custom-font-merriweather hover:text-white text-4xl"><image src="https://file.notion.so/f/f/14eaa4b0-576e-47b1-9dab-cb2bf7401346/8f1e2a65-7666-4b3b-90c4-3365f3da1427/Buildfast_Logo.png?id=479978c4-4078-4970-8bcd-d2f495974822&table=block&spaceId=14eaa4b0-576e-47b1-9dab-cb2bf7401346&expirationTimestamp=1700827200000&signature=thzTOxWntbRDpkE0MRt_IpBIyngt_iNVkdsPa-IqAic&downloadName=Buildfast_Logo.png" style="height:60px;" /></a>   
         <a href="#works" class="custom-font-merriweather hover:text-white text-m">How it works?</a>
       <a href="#" class="custom-font-merriweather hover:text-white text-m">Pricing</a>
     </div>
