--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="container mt-5 mx-auto">
-        <h2 class="mb-4 text-4xl">-- Create beautiful HTML + Tailwind CSS Landing Pages from Screenshots✨ --</h2>
+        <h2 class="mb-4 text-4xl">Create beautiful HTML + Tailwind CSS Landing Pages from Screenshots✨</h2>
         
         <form action="/upload" method="post" enctype="multipart/form-data">
             <div class="form-group">
@@ -75,9 +75,10 @@
     
     
         <textarea id="code" class="form-control mt-4" rows="10" readonly>{{ code }}</textarea>
-    
-    
-        <button id="copyButton" class="btn btn-outline-light mt-2">Copy Code</button>
+      
+        <h3 class="mb-4 text-2xl mt-4">Preview✨</h3>
+        <iframe id="codeFrame" class="form-control mt-4" srcdoc="{{ code }}" style="width:100%; height:650px;"></iframe>
+
 {% else %}
 
 <nav class="flex flex-wrap items-center justify-between p-6">
@@ -219,12 +220,7 @@
         code.select();
         document.execCommand('copy');
     });
-</script>
+  </script>
 
 </body>
 </html> 
-
-
-
-
-
