--- a/templates/index.html
+++ b/templates/index.html
@@ -224,7 +224,7 @@
               <span class="text-5xl font-bold tracking-tight text-white">$29</span>
               <span class="text-sm font-semibold leading-6 tracking-wide text-white">USD</span>
             </p>
-            <a href="#" class="mt-10 block w-full rounded-md bg-white px-4 py-2 text-center text-sm font-semibold text-black shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get access</a>           
+            <a href="https://buy.stripe.com/28o5nt7E8fml3bW5kq" class="mt-10 block w-full rounded-md bg-white px-4 py-2 text-center text-sm font-semibold text-black shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get access</a>           
           </div>
         </div>
       </div>
