--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generative Coder</title>
+    <title>Buildfast - Image to Code</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://cdn.tailwindcss.com/2.2.19/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Merriweather:wght@700&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></link>
-    <link rel="shortcut icon" type="image/x-icon" href="git link">
+    <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/DarkInventor/Buildfast/main/favicon.ico">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
@@ -105,7 +105,7 @@
     <p class="text-sm font-bold text-gray-400 custom-font-merriweather uppercase tracking-widest mx-auto">-- Build Landing Pages using HTML + Tailwind CSS + Javascript --</p>
     <!-- main title -->
     <h1 class="text-3xl md:text-4xl lg:text-5xl xl:text-6xl font-bold my-4 custom-font-opensans">
-      Convert <span class="text-blue-500">Screenshots to Code</span><br>for Building Landing Pages in "<" 2 mins
+      Converting <span class="text-blue-500">Screenshots to Code</span><br>for Building Landing Pages in minutes
     </h1>
     <!-- subtitle -->
     <p class="text-base md:text-lg mx-auto mt-8 leading-relaxed max-w-xl">
