--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
 <nav class="flex flex-wrap items-center justify-between p-6">
     <!-- navigation links left -->
     <div class="flex items-center text-gray-400 space-x-10 mx-auto ">   
-        <a href="#" class="custom-font-merriweather hover:text-white text-4xl"><image src="https://file.notion.so/f/f/14eaa4b0-576e-47b1-9dab-cb2bf7401346/8f1e2a65-7666-4b3b-90c4-3365f3da1427/Buildfast_Logo.png?id=479978c4-4078-4970-8bcd-d2f495974822&table=block&spaceId=14eaa4b0-576e-47b1-9dab-cb2bf7401346&expirationTimestamp=1701108000000&signature=w7zZ-6SVC6rECdVkZ1TISAm7tzaku8KAsNsHDTob01U&downloadName=Buildfast_Logo.png" style="height:60px;" /></a>   
+        <a href="#" class="custom-font-merriweather hover:text-white text-4xl"><image src="https://file.notion.so/f/f/14eaa4b0-576e-47b1-9dab-cb2bf7401346/c8d2bfdc-4279-435f-b747-962cc5d39b99/Component_2.png?id=7809d871-b206-4363-bb0b-2364bbbf5ea0&table=block&spaceId=14eaa4b0-576e-47b1-9dab-cb2bf7401346&expirationTimestamp=1701172800000&signature=4f3n2h7ULHyspGEFafmdGlH8r_mxg92TPF0bJvvEPmg&downloadName=Component+2.png" style="height:60px;" /></a>   
         <a href="#works" class="custom-font-merriweather hover:text-white text-m">How it works?</a>
       <a href="#" class="custom-font-merriweather hover:text-white text-m">Pricing</a>
     </div>
@@ -178,7 +178,7 @@
     </div>
 </div>
 
-
+  <!-- Pricing section -->
   <div class="mx-auto max-w-7xl px-6 lg:px-8 mb-20">
     <div class="mx-auto max-w-2xl sm:text-center">
       <h2 class="text-6xl font-bold tracking-tight text-white sm:text-6xl">Simple no-tricks pricing</h2>      
@@ -218,8 +218,8 @@
           </li>
         </ul>
       </div>
-      <div class="-mt-2 p-4 lg:mt-0 lg:w-full lg:max-w-md lg:flex-shrink-0">
-        <div class="rounded-2xl bg-gray-800 py-10 text-center ring-1 ring-inset ring-gray-900/5 lg:flex lg:flex-col lg:justify-center lg:py-16">
+      <div class="-mt-2 p-4 lg:mt-1 lg:w-full lg:max-w-md lg:flex-shrink-0">
+        <div class="rounded-2xl bg-gray-800 py-8 text-center ring-1 ring-inset ring-gray-900/5 lg:flex lg:flex-col lg:justify-center lg:py-20">
           <div class="mx-auto max-w-xs px-8">
             <p class="text-base font-semibold text-white">Monthly</p>
             <p class="mt-6 flex items-baseline justify-center gap-x-2">
@@ -233,8 +233,55 @@
     </div>
   </div>
 
+    <!-- Upcoming Featues section -->
 
-
+    <div class="container mx-auto px-6 py-2 mb-10">
+      <div class="text-center mb-12">
+          <h2 class="text-6xl font-bold text-white mb-4">Upcoming Features</h2>         
+      </div>
+      
+      <div class="flex flex-wrap -mx-4">
+          <div class="w-full sm:w-1/2 md:w-1/4 px-4 mb-8">
+              <div class="bg-gray-200 rounded-lg overflow-hidden shadow-lg p-8 text-center">
+                  <div class="bg-white rounded-full p-4 inline-block mb-6 shadow-lg">
+                      <span class="text-xl font-bold text-gray-800">1</span>
+                  </div>
+                  <h3 class="text-sm uppercase font-semibold text-blue-600 mb-3">Dall.E 3 (coming soon)</h3>
+                  <p class="text-gray-600 text-sm">This will enable image cloning + exact copy of the image provided.</p>
+              </div>
+          </div>
+          
+          <div class="w-full sm:w-1/2 md:w-1/4 px-4 mb-8">
+              <div class="bg-gray-200 rounded-lg overflow-hidden shadow-lg p-8 text-center">
+                  <div class="bg-white rounded-full p-4 inline-block mb-6 shadow-lg">
+                      <span class="text-xl font-bold text-gray-800">2</span>
+                  </div>
+                  <h3 class="text-sm uppercase font-semibold text-blue-600 mb-3">Prompts (coming soon)</h3>
+                  <p class="text-gray-600 text-sm">Users will be able to chat for making real-time changes in the output image.</p>
+              </div>
+          </div>
+          
+          <div class="w-full sm:w-1/2 md:w-1/4 px-4 mb-8">
+              <div class="bg-gray-200 rounded-lg overflow-hidden shadow-lg p-8 text-center">
+                  <div class="bg-white rounded-full p-4 inline-block mb-6 shadow-lg">
+                      <span class="text-xl font-bold text-gray-800">3</span>
+                  </div>
+                  <h3 class="text-sm uppercase font-semibold text-blue-600 mb-3">(COMING SOON)</h3>
+                 <!-- <p class="text-gray-600 text-sm">Lorem ipsum dolor amet adipiscing eiusmod.</p>-->
+              </div>
+          </div>
+          
+          <div class="w-full sm:w-1/2 md:w-1/4 px-4 mb-8">
+              <div class="bg-gray-200 rounded-lg overflow-hidden shadow-lg p-8 text-center">
+                  <div class="bg-white rounded-full p-4 inline-block mb-6 shadow-lg">
+                      <span class="text-xl font-bold text-gray-800">4</span>
+                  </div>
+                  <h3 class="text-sm uppercase font-semibold text-blue-600 mb-3">(COMING SOON)</h3>
+                  <!-- <p class="text-gray-600 text-sm">Lorem ipsum dolor amet adipiscing eiusmod.</p>-->
+              </div>
+          </div>
+      </div>
+  </div>
 
 
 
