--- a/templates/index.html
+++ b/templates/index.html
@@ -134,6 +134,14 @@
       Your browser does not support the video tag.
   </video>
 
+  <div class="container mx-auto px-6 py-2 lg:mt-10">
+    <div class="text-center mb-12">
+        <h2 class="text-6xl font-bold text-white mb-10">Loved by industry leaders</h2>
+  <div class="famewall-embed" data-src="buildfast" data-format="slider" style="width:100%;"></div>
+  <script type="text/javascript" src="https://embed.famewall.io/frame.js" defer></script>
+    </div>
+  </div>
+
   <div class="container mx-auto px-10 py-20">
     <!-- Heading section -->
     <div class="text-center mb-20">
@@ -242,7 +250,7 @@
       
       <div class="flex flex-wrap -mx-4">
           <div class="w-full sm:w-1/2 md:w-1/4 px-4 mb-8">
-              <div class="bg-gray-200 rounded-lg overflow-hidden shadow-lg p-8 text-center">
+              <div class="bg-gray-200 rounded-2xl overflow-hidden shadow-lg p-8 text-center">
                   <div class="bg-white rounded-full p-4 inline-block mb-6 shadow-lg">
                       <span class="text-xl font-bold text-gray-800">1</span>
                   </div>
@@ -252,7 +260,7 @@
           </div>
           
           <div class="w-full sm:w-1/2 md:w-1/4 px-4 mb-8">
-              <div class="bg-gray-200 rounded-lg overflow-hidden shadow-lg p-8 text-center">
+              <div class="bg-gray-200 rounded-2xl overflow-hidden shadow-lg p-8 text-center">
                   <div class="bg-white rounded-full p-4 inline-block mb-6 shadow-lg">
                       <span class="text-xl font-bold text-gray-800">2</span>
                   </div>
@@ -262,7 +270,7 @@
           </div>
           
           <div class="w-full sm:w-1/2 md:w-1/4 px-4 mb-8">
-              <div class="bg-gray-200 rounded-lg overflow-hidden shadow-lg p-8 text-center">
+              <div class="bg-gray-200 rounded-2xl overflow-hidden shadow-lg p-8 text-center">
                   <div class="bg-white rounded-full p-4 inline-block mb-6 shadow-lg">
                       <span class="text-xl font-bold text-gray-800">3</span>
                   </div>
@@ -272,7 +280,7 @@
           </div>
           
           <div class="w-full sm:w-1/2 md:w-1/4 px-4 mb-8">
-              <div class="bg-gray-200 rounded-lg overflow-hidden shadow-lg p-8 text-center">
+              <div class="bg-gray-200 rounded-2xl overflow-hidden shadow-lg p-8 text-center">
                   <div class="bg-white rounded-full p-4 inline-block mb-6 shadow-lg">
                       <span class="text-xl font-bold text-gray-800">4</span>
                   </div>
@@ -283,7 +291,16 @@
       </div>
   </div>
 
-
+  <!-- Feedback section -->
+  <div class="container mx-auto px-6 py-2 mb-10">
+    <div class="text-center mb-12">
+        <h2 class="text-6xl font-bold text-white mb-4">Got Feature suggestions or Feedback?</h2>         
+   
+  <script type="text/javascript" src="https://page.famewall.io/iframeResizer.min.js"></script>
+  <iframe id="famewall-collection-embed" src="https://page.famewall.io/buildfast" allow="camera;microphone" frameborder="0" scrolling="no" width="100%"></iframe>
+  <script type="text/javascript">iFrameResize({log: false, checkOrigin: false}, "#famewall-collection-embed");</script>
+</div>
+</div>
 
 <div class="container mx-auto px-4 py-8 border-top">
   <div class="flex flex-col items-center md:flex-row md:justify-between">
