removed memoji for small & medium sized devices

--- a/templates/index.html
+++ b/templates/index.html
@@ -321,7 +321,7 @@
   
   
   <!-- animated avatar image with speech bubble (Placeholder for actual image) -->
-  <div class="absolute bottom-0 right-0 mr-4 md:mr-8 lg:mr-16 mb-6">
+  <div class="absolute bottom-0 right-0 mr-4 md:mr-8 lg:mr-16 mb-6 hidden lg:block">
     <img src="https://kathann.vercel.app/memoji.jpeg" style="height:120px; width: auto;" alt="Animated avatar giving a thumbs up with speech bubble saying 'Let's get to work!'" class="rounded-full">
   </div>
   
