--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
 
     
 
-    {% if current_user.is_authenticated %}
+    {% if current_user.is_authenticated and current_user.has_paid %}
     <div class="container mt-4 p-1 border rounded" style="width:500px;">
         <div class="row mx-auto">
             <div class="col text-center mt-1 ml-3">
@@ -84,7 +84,12 @@
         <iframe id="codeFrame" class="form-control mt-4" srcdoc="{{ code }}" style="width:100%; height:650px;"></iframe>
 
 {% else %}
-
+{% if current_user.is_authenticated %}
+<script>
+  // Use JavaScript to automatically redirect to the logout URL
+  window.location.href = "{{ url_for('logout') }}";
+</script>
+{% endif %}
 <nav class="flex flex-wrap items-center justify-between p-6">
     <!-- navigation links left -->
     <div class="flex items-center text-gray-400 space-x-10 mx-auto ">   
