updated video link with git

--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
     <p class="text-sm font-bold text-gray-400 custom-font-merriweather uppercase tracking-widest mx-auto">-- Build Landing Pages using HTML + Tailwind CSS + Javascript --</p>
     <!-- main title -->
     <h1 class="text-3xl md:text-4xl lg:text-5xl xl:text-6xl font-bold my-4 custom-font-opensans">
-      Converting <span class="text-blue-500">Screenshots to Code</span><br>for Building Landing Pages in minutes
+      Convert <span class="text-blue-500">Screenshots to Code</span><br>for Building Landing Pages in minutes
     </h1>
     <!-- subtitle -->
     <p class="text-base md:text-lg mx-auto mt-8 leading-relaxed max-w-xl">
@@ -132,10 +132,10 @@
     </div>
     <!-- trust signal -->
     <div class="text-gray-400 font-semibold custom-font-merriweather mt-10 text-2xl mb-4">
-      How it works?
+      How does it work?
     </div>
     <video id="works" class="mx-auto" style="width:900px; height:400px;" controls autoplay muted>
-      <source src="https://file.notion.so/f/f/14eaa4b0-576e-47b1-9dab-cb2bf7401346/05a96ac4-5395-47b0-8bb0-f17eb5e67732/twittervid.com_kathanmehtaa_e4848a.mp4?id=ecc412e4-7065-4716-ac6d-0a69595b593a&table=block&spaceId=14eaa4b0-576e-47b1-9dab-cb2bf7401346&expirationTimestamp=1701108000000&signature=FdxWbcqQ6OahLCI3aWRTi5u2dvMee9ZH2DPbrtpKkBI&downloadName=twittervid.com_kathanmehtaa_e4848a.mp4" type="video/mp4">
+      <source src="https://github.com/DarkInventor/Buildfast/raw/main/BuildfastDemo.mp4" type="video/mp4">
       Your browser does not support the video tag.
   </video>
 
