added output images

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
       Convert <span class="text-blue-500">Screenshots to Code</span><br>for Building Landing Pages in minutes
     </h1>
     <!-- subtitle -->
-    <p class="text-base md:text-lg mx-auto mt-8 leading-relaxed max-w-xl">
+    <p class="text-base md:text-lg mx-auto mt-8 leading-relaxed max-w-xl text-gray-400">
       Upload the Screenshot Image and get the Code.<br>
       Create high converting websites to double your MRR.
     </p>
