added output images

--- a/templates/index.html
+++ b/templates/index.html
@@ -147,7 +147,7 @@
   
   <!-- Card 1 -->
     <div class="max-w-md p-8 bg-white rounded-2xl shadow-md">
-        <p class="text-sm font-semibold text-indigo-600 uppercase tracking-wide">Input</p>
+        <p class="text-sm font-semibold text-blue-600 uppercase tracking-wide">Input</p>
         <h3 class="mt-4 text-2xl font-bold text-gray-900 sm:text-3xl">Image of Landing Page</h3>
         <p class="mt-2 text-gray-600">Upload the screenshot of any landing page you like</p>
         <img class="mt-8 w-full h-auto rounded-xl" src="https://github.com/DarkInventor/buildingfast/raw/main/inputt.png" alt="Laptop showing video course materials with play button, a person speaking, and presentation slides" />      
@@ -158,7 +158,7 @@
 
     <!-- Card 2 -->
     <div class="max-w-lg p-8 bg-white rounded-2xl shadow-md mb-4">
-        <p class="text-sm font-semibold text-indigo-600 uppercase tracking-wide">Output</p>
+        <p class="text-sm font-semibold text-blue-600 uppercase tracking-wide">Output</p>
         <h3 class="mt-4 text-2xl font-bold text-gray-900 sm:text-4xl">Preview Output</h3>
         <p class="mt-2 text-gray-600">Get stunning HTML, Tailwind CSS + Javascript code as an output</p>
         <img class="mt-8 w-full h-auto rounded-xl" src="https://github.com/DarkInventor/buildingfast/raw/main/outputt.png" alt="Laptop displaying a landing page with play button, a person with microphone, and website content" />
