--- a/templates/index.html
+++ b/templates/index.html
@@ -94,8 +94,8 @@
     <!-- navigation links left -->
     <div class="flex items-center text-gray-400 space-x-10 mx-auto ">   
         <a href="#" class="custom-font-merriweather hover:text-white text-4xl"><image src="https://github.com/DarkInventor/buildingfast/raw/main/buildfast.png" style="height:60px;" /></a>   
-        <a href="#works" class="custom-font-merriweather hover:text-white text-m">How it works?</a>
-      <a href="#" class="custom-font-merriweather hover:text-white text-m">Pricing</a>
+        <a href="/#works" class="custom-font-merriweather hover:text-white text-m">How does it works?</a>
+      <a href="/#pricing" class="custom-font-merriweather hover:text-white text-m">Pricing</a>
     </div>
     <!-- logo in the middle -->
     <a href="#" class="text-2xl font-bold text-white custom-font-opensans md:text-3xl lg:text-4xl xl:text-5xl mx-auto">Buildfast</a>
@@ -131,16 +131,16 @@
 
     </div>
     <!-- trust signal -->
-    <div class="text-gray-400 font-semibold custom-font-merriweather mt-10 text-2xl mb-4">
+    <div class="text-gray-400 font-semibold custom-font-merriweather mt-10 text-2xl mb-4" id="works">
       How does it work?
     </div>
-    <video id="works" class="mx-auto" style="width:900px; height:400px;" controls autoplay muted>
+    <video class="mx-auto" style="width:900px; height:400px;" controls autoplay muted>
       <source src="https://github.com/DarkInventor/buildingfast/raw/main/BuildfastDemo.mp4" type="video/mp4">
       Your browser does not support the video tag.
   </video>
 
   <div class="text-gray-400 font-semibold custom-font-merriweather mt-10 text-2xl lg:-mb-12 sm:text-3xl md:text-4xl lg:text-6xl xl:text-3xl relative">
-    Like a Landing Page?
+    Example
 </div> 
 
 <div class="flex flex-col items-center justify-center min-h-screen p-6 space-y-10 sm:flex-row sm:space-x-10">
@@ -221,9 +221,9 @@
   <!-- Pricing section -->
   <div class="mx-auto max-w-7xl px-6 lg:px-8 mb-20">
     <div class="mx-auto max-w-2xl sm:text-center">
-      <h2 class="text-6xl font-bold tracking-tight text-white sm:text-6xl">Simple no-tricks pricing</h2>      
+      <h2 class="text-6xl font-bold tracking-tight text-white sm:text-6xl">Simple Pricing</h2>      
     </div>
-    <div class="mx-auto mt-16 max-w-2xl rounded-3xl ring-1 ring-gray-200 sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
+    <div class="mx-auto mt-16 max-w-2xl rounded-3xl ring-1 ring-gray-200 sm:mt-20 lg:mx-0 lg:flex lg:max-w-none" id="pricing">
       <div class="p-8 sm:p-10 lg:flex-auto">
         <h3 class="text-4xl font-bold tracking-tight text-white">Monthly membership</h3>
         <p class="mt-6 text-base leading-7 text-white text-lg">Convert any websites into stunning HTML + Tailwind CSS + Javascript code. </p>
