only 3 free generations after than button will get disabled

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,8 +73,8 @@
             <button type="submit" class="btn btn-primary">Upload and Generate Code</button>
         </form>
         {% else %}
-        <p class="text-xl mt-2 mb-3">-- Please note you haven't paid yet, you get only 2-3 free generations to checkout Buildfast until you pay --</p>
-        <a href="https://buy.stripe.com/fZeaHN3nS8XXeUE3cn" class="text-blue-500 hover:text-blue-700"><p class="text-lg mt-3 mb-3">Click here to pay now and start generating 100s of Landing Pages with Buildfast :)</p></a>
+        <p class="text-xl mt-2 mb-3">-- Welcome and Congrats🎉, You get 2 Free Buildfast Generations --</p>
+        <a href="https://buy.stripe.com/fZeaHN3nS8XXeUE3cn" class="text-blue-500 hover:text-blue-700"><p class="text-lg mt-3 mb-3">Click here to pay now and start generating 100s of Landing Pages using Buildfast :)</p></a>
         <form action="/upload" method="post" enctype="multipart/form-data" onsubmit="return handleClick()">
           <div class="form-group">
               <label for="imageUpload">Choose an image:</label>
