--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,8 @@
       .custom-font-opensans { font-family: 'Open Sans', sans-serif; }
     </style>    
 </head>
-<body style="background-color: black; color: white;">
-    
-    
+<body style="color: white; background: black;">
+ 
 <!-- <div class="container mt-5">
     <h2 class="mb-4">Create beautiful HTML + Tailwind CSS Landing Pages from Screenshots✨</h2>
     
@@ -63,12 +62,60 @@
     </div>
 
     <div class="container mt-5 mx-auto">
-        <h2 class="mb-4 text-4xl">Create beautiful HTML + Tailwind CSS Landing Pages from Screenshots✨</h2>
+      <blockquote class="text-2xl font-semibold italic text-white">
+        Create beautiful
+        <span class="before:block before:absolute before:-inset-1 before:-skew-y-3 before:bg-blue-600 relative inline-block">
+          <span class="relative text-white">Landing Pages</span>
+        </span>
+        from Screenshots✨
+      </blockquote>
+        <!--<h2 class="mb-4 text-4xl">Create beautiful HTML + Tailwind CSS Landing Pages from Screenshots✨</h2>-->
         {% if current_user.has_paid %}
         <form action="/upload" method="post" enctype="multipart/form-data">
-            <div class="form-group">
-                <label for="imageUpload">Choose an image:</label>
-                <input type="file" class="form-control-file " id="imageUpload" name="file" accept="image/*" required>
+            <div class="form-group mt-3">
+              <h3 class="mb-3 text-lg font-medium text-gray-900 dark:text-white">Choose an image:</h3>
+                <input type="file" class="mb-3 form-control-f block w-full text-sm text-slate-500
+                file:mr-4 file:py-2 file:px-4
+                file:rounded-full file:border-0
+                file:text-sm file:font-semibold
+                file:bg-violet-50 file:text-black-700
+                hover:file:bg-blue-200" id="imageUpload" name="file" accept="image/*" required>
+                <h3 class="mb-3 text-lg font-medium text-gray-900 dark:text-white">Select a Language/Framework to get the code:</h3>
+<ul class="grid w-full gap-4 md:grid-cols-3">
+    <li>
+        <input type="radio" id="htmlcode" name="hosting" value="htmlcode" class="hidden peer" required>
+        <label for="htmlcode" class="inline-flex items-center justify-between w-full p-4 text-gray-500 bg-white border border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 dark:peer-checked:text-blue-500 peer-checked:border-blue-600 peer-checked:text-blue-600 hover:text-gray-600 hover:bg-gray-100 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700">                           
+            <div class="block">
+                <div class="w-full text-lg font-semibold">HTML + Tailwind CSS + JS</div>
+            </div>
+            <svg class="w-5 h-5 ms-3 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+            </svg>
+        </label>
+    </li>
+    <li>
+        <input type="radio" id="bootstrapcode" name="hosting" value="bootstrapcode" class="hidden peer">
+        <label for="bootstrapcode" class="inline-flex items-center justify-between w-full p-4 text-gray-500 bg-white border border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 dark:peer-checked:text-blue-500 peer-checked:border-blue-600 peer-checked:text-blue-600 hover:text-gray-600 hover:bg-gray-100 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700">
+            <div class="block">
+                <div class="w-full text-lg font-semibold">HTML + Bootstrap + JS</div>
+            </div>
+            <svg class="w-5 h-5 ms-3 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+            </svg>
+        </label>
+    </li>
+    <li>
+      <input type="radio" id="reactcode" name="hosting" value="reactcode" class="hidden peer" required>
+      <label for="reactcode" class="inline-flex items-center justify-between w-full p-4 text-gray-500 bg-white border border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 dark:peer-checked:text-blue-500 peer-checked:border-blue-600 peer-checked:text-blue-600 hover:text-gray-600 hover:bg-gray-100 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700">                           
+          <div class="block">
+              <div class="w-full text-lg font-semibold">React + Tailwind CSS</div>
+          </div>
+          <svg class="w-5 h-5 ms-3 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+          </svg>
+      </label>
+  </li>
+</ul>
             </div>            
             <button type="submit" class="btn btn-primary">Upload and Generate Code</button>
         </form>
