responsive design + loading animation

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
       .custom-font-opensans { font-family: 'Open Sans', sans-serif; }
     </style>    
 </head>
-<body style="color: white; background: black;" class="lg:max-w-screen-xl mx-auto md:w-[970px]">
+<body style="color: white; background: black;" class="mx-auto">
  
 <!-- <div class="container mt-5">
     <h2 class="mb-4">Create beautiful HTML + Tailwind CSS Landing Pages from Screenshots✨</h2>
