--- a/templates/index.html
+++ b/templates/index.html
@@ -162,10 +162,10 @@
 {% endif %} -->
 <nav class="flex flex-wrap items-center justify-between p-6">
     <!-- navigation links left -->
-    <div class="flex items-center text-gray-400 space-x-10 mx-auto ">   
+    <div class="flex items-center text-gray-400 space-x-10 mx-auto">   
         <a href="#" class="custom-font-merriweather hover:text-white text-4xl"><image src="https://github.com/DarkInventor/buildingfast/raw/main/buildfast.png" style="height:60px;" /></a>   
-        <a href="/#works" class="custom-font-merriweather hover:text-white text-m">How does it works?</a>
-      <a href="/#pricing" class="custom-font-merriweather hover:text-white text-m">Pricing</a>
+        <a href="/#works" class="custom-font-merriweather hover:text-white text-m lg:block hidden">How does it works?</a>
+      <a href="/#pricing" class="custom-font-merriweather hover:text-white text-m lg:block hidden">Pricing</a>
     </div>
     <!-- logo in the middle -->
     <a href="#" class="text-2xl font-bold text-white custom-font-opensans md:text-3xl lg:text-4xl xl:text-5xl mx-auto">Buildfast</a>
